--- a/vignettes/mlr3learners_lightgbm_regression.Rmd
+++ b/vignettes/mlr3learners_lightgbm_regression.Rmd
@@ -29,7 +29,7 @@ library(lightgbm.py)
 
 # Install the package
 
-In order to use the `mlr3learners.lightgbm` R package, please make sure, the reticulate package is configured properly on your system. If not, you can e.g. install `miniconda`:
+In order to use the `mlr3learners.lightgbm` R package, please make sure, the reticulate package is configured properly on your system (reticulate version >= 1.13.0.9006) and is pointing to a python environment. If not, you can e.g. install `miniconda`:
 
 ```{r eval=FALSE}
 reticulate::install_miniconda(
@@ -108,7 +108,7 @@ learner$num_boost_round <- 5000
 Next, the learner parameters need to be set. At least, the `objective` parameter needs to be provided! Almost all possible parameters have been implemented here. You can inspect them using the following command: 
 
 ```{r eval=FALSE}
-lgb_learner$param_set
+learner$param_set
 ```
 
 Please refer to the [LightGBM manual](https://lightgbm.readthedocs.io) for further details on these parameters. 
