fixed wrong task ids

--- a/vignettes/mlr3learners_lightgbm_binary.Rmd
+++ b/vignettes/mlr3learners_lightgbm_binary.Rmd
@@ -78,7 +78,7 @@ table(dataset[split$test_index, target_col, with = F])
 
 ```{r}
 task <- TaskClassif$new(
-  id = "iris",
+  id = "PimaIndiansDiabetes2",
   target = target_col,
   backend = dataset
 )
