--- a/vignettes/mlr3learners_lightgbm_regression.Rmd
+++ b/vignettes/mlr3learners_lightgbm_regression.Rmd
@@ -76,7 +76,7 @@ split <- lightgbm.py::sklearn_train_test_split(
 
 ```{r}
 task <- TaskRegr$new(
-  id = "iris",
+  id = "BostonHousing",
   target = target_col,
   backend = dataset
 )
