--- a/vignettes/mlr3learners_lightgbm_regression.Rmd
+++ b/vignettes/mlr3learners_lightgbm_regression.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "mlr3learners.lightgbm: Regression Example"
+title: "mlr3learners.lgbpy: Regression Example"
 date: "`r Sys.Date()`"
 output:
   rmarkdown::html_vignette:
@@ -22,14 +22,14 @@ dir.create("./png")
 
 ```{r setup}
 library(mlr3)
-library(mlr3learners.lightgbm)
+library(mlr3learners.lgbpy)
 library(mlbench)
 library(lightgbm.py)
 ```
 
 # Install the package
 
-In order to use the `mlr3learners.lightgbm` R package, please make sure, the reticulate package is configured properly on your system (reticulate version >= 1.14) and is pointing to a python environment. If not, you can e.g. install `miniconda`:
+In order to use the `mlr3learners.lgbpy` R package, please make sure, the reticulate package is configured properly on your system (reticulate version >= 1.14) and is pointing to a python environment. If not, you can e.g. install `miniconda`:
 
 ```{r eval=FALSE}
 reticulate::install_miniconda(
