--- a/vignettes/mlr3learners_lightgbm_tuning.Rmd
+++ b/vignettes/mlr3learners_lightgbm_tuning.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "mlr3learners.lightgbm: Hyperparameter Tuning Example"
+title: "mlr3learners.lgbpy: Hyperparameter Tuning Example"
 date: "`r Sys.Date()`"
 output:
   rmarkdown::html_vignette:
@@ -12,7 +12,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r, include = FALSE}
+```{r include = FALSE, eval=FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
@@ -22,7 +22,7 @@ dir.create("./png")
 
 ```{r setup}
 library(mlr3)
-library(mlr3learners.lightgbm)
+library(mlr3learners.lgbpy)
 library(mlbench)
 library(lightgbm.py)
 library(paradox)
@@ -44,13 +44,26 @@ target_col <- "diabetes"
 id_col <- NULL
 ```
 
+```{r}
+split <- lightgbm.py::sklearn_train_test_split(
+  dataset,
+  target_col,
+  split = 0.7,
+  seed = 17,
+  return_only_index = TRUE,
+  stratify = TRUE
+)
+table(dataset[split$train_index, target_col, with = F])
+table(dataset[split$test_index, target_col, with = F])
+```
+
 # Define an mlr3 task 
 
 ```{r}
 task <- TaskClassif$new(
   id = "PimaIndiansDiabetes2",
   target = target_col,
-  backend = dataset
+  backend = dataset[split$train_index, ]
 )
 ```
 
@@ -67,17 +80,9 @@ learner <- mlr3::lrn("classif.lightgbm")
 ```{r}
 learner$split_seed <- 2
 learner$validation_split <- 0.7
-learner$early_stopping_rounds <- 1000
+learner$early_stopping_rounds <- 100
 learner$num_boost_round <- 5000
 ```
-
-Next, the learner parameters need to be set. At least, the `objective` parameter needs to be provided! Almost all possible parameters have been implemented here. You can inspect them using the following command: 
-
-```{r eval=FALSE}
-View(learner$param_set$default)
-```
-
-Please refer to the [LightGBM manual](https://lightgbm.readthedocs.io) for further details on these parameters. 
 
 ```{r}
 learner$param_set$values <- list(
@@ -89,14 +94,14 @@ learner$param_set$values <- list(
 
 tune_ps <- ParamSet$new(list(
   ParamDbl$new("bagging_fraction", lower = 0.4, upper = 1),
-  ParamInt$new("min_sum_hessian_in_leaf", lower = 1e-3, upper = 5)
+  ParamInt$new("min_data_in_leaf", lower = 5, upper = 30)
 ))
 ```
 
 # Resampling strategy
 
 ```{r}
-resamp <- mlr3::rsmp("cv")
+resamp <- mlr3::rsmp("cv", folds = 5)
 measure <- mlr3::msr("classif.auc")
 ```
 
@@ -116,7 +121,73 @@ instance <- mlr3tuning::TuningInstance$new(
 instance
 ```
 
-```{r eval=FALSE}
+```{r}
+future::plan("multicore")
 tuner <- mlr3tuning::tnr("grid_search", resolution = 5)
+set.seed(17)
 result <- tuner$tune(instance)
+future::plan("sequential")
 ```
+
+```{r}
+best <- instance$best()
+best$score(mlr3::msr("classif.auc"))
+```
+
+```{r}
+instance$archive(unnest = "params")[, c("bagging_fraction", "min_data_in_leaf", "classif.auc")]
+```
+
+```{r}
+instance$result$params
+learner$param_set$values <- instance$result$params
+learner$train(task)
+```
+
+```{r}
+learner$model$best_iteration
+learner$model$best_score$valid_0
+```
+
+```{r}
+predict_task <- TaskClassif$new(
+  id = "PimaIndiansDiabetes2",
+  target = target_col,
+  backend = dataset[split$test_index, ]
+)
+```
+
+```{r}
+predictions <- learner$predict(predict_task)
+head(predictions$response)
+```
+
+```{r}
+predictions$confusion
+```
+
+```{r}
+predictions$score(mlr3::msr("classif.logloss"))
+predictions$score(mlr3::msr("classif.auc"))
+```
+
+```{r}
+importance <- learner$importance()
+importance$raw_values
+```
+```{r results='hide', message=FALSE, warning=FALSE, error=FALSE}
+filename <- "./png/mlr3learners.lgb_imp_binary.png"
+grDevices::png(
+    filename = filename,
+    res = 150,
+    height = 1000,
+    width = 1500
+  )
+print(importance$plot)
+grDevices::dev.off()
+```
+```{r out.width='80%'}
+knitr::include_graphics(filename)
+```
+
+
