--- a/vignettes/mlr3learners_lightgbm_multiclass.Rmd
+++ b/vignettes/mlr3learners_lightgbm_multiclass.Rmd
@@ -89,10 +89,10 @@ mlr3viz::autoplot(task)
 
 # Instantiate the lightgbm learner 
 
-Initially, the `classif.lightgbm` class needs to be instantiated: 
+Initially, the `classif.lgbpy` class needs to be instantiated: 
 
 ```{r}
-learner <- mlr3::lrn("classif.lightgbm")
+learner <- mlr3::lrn("classif.lgbpy")
 ```
 
 # Configure the learner 
