--- a/vignettes/mlr3learners_lightgbm_tuning.Rmd
+++ b/vignettes/mlr3learners_lightgbm_tuning.Rmd
@@ -12,18 +12,17 @@ editor_options:
   chunk_output_type: console
 ---
 
-```{r include = FALSE, eval=FALSE}
+```{r include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
-dir.create("./png")
 ```
 
 ```{r setup}
 library(mlr3)
 library(mlr3learners.lgbpy)
-library(mlbench)
 library(lightgbm.py)
 library(paradox)
 ```
@@ -33,38 +32,25 @@ reticulate::py_config()
 lightgbm.py::install_py_lightgbm()
 ```
 
-# Load the dataset
-
-The data must be provided as a `data.table` object. To simplify the subsequent steps, the target column name and the ID column name are assigned to the variables `target_col` and `id_col`, respectively. 
+# Load the mlr3 task
 
 ```{r}
-data("PimaIndiansDiabetes2")
-dataset <- data.table::as.data.table(PimaIndiansDiabetes2)
+task <- mlr3::tsk("pima")
 target_col <- "diabetes"
 id_col <- NULL
 ```
 
 ```{r}
 split <- lightgbm.py::sklearn_train_test_split(
-  dataset,
+  task$data(),
   target_col,
   split = 0.7,
   seed = 17,
   return_only_index = TRUE,
   stratify = TRUE
 )
-table(dataset[split$train_index, target_col, with = F])
-table(dataset[split$test_index, target_col, with = F])
-```
-
-# Define an mlr3 task 
-
-```{r}
-task <- TaskClassif$new(
-  id = "PimaIndiansDiabetes2",
-  target = target_col,
-  backend = dataset[split$train_index, ]
-)
+table(task$data()[split$train_index, task$target_names, with = F])
+table(task$data()[split$test_index, task$target_names, with = F])
 ```
 
 # Instantiate the lightgbm learner 
@@ -142,7 +128,7 @@ instance$archive(unnest = "params")[, c("bagging_fraction", "min_data_in_leaf", 
 ```{r}
 instance$result$params
 learner$param_set$values <- instance$result$params
-learner$train(task)
+learner$train(task, row_ids = split$train_index)
 ```
 
 ```{r}
@@ -151,15 +137,7 @@ learner$model$best_score$valid_0
 ```
 
 ```{r}
-predict_task <- TaskClassif$new(
-  id = "PimaIndiansDiabetes2",
-  target = target_col,
-  backend = dataset[split$test_index, ]
-)
-```
-
-```{r}
-predictions <- learner$predict(predict_task)
+predictions <- learner$predict(task, row_ids = split$test_index)
 head(predictions$response)
 ```
 
@@ -180,19 +158,4 @@ importance
 importance2 <- learner$importance2()
 importance2$raw_values
 ```
-```{r results='hide', message=FALSE, warning=FALSE, error=FALSE}
-filename <- "./png/mlr3learners.lgb_imp_tuning.png"
-grDevices::png(
-    filename = filename,
-    res = 150,
-    height = 1000,
-    width = 1500
-  )
-print(importance2$plot)
-grDevices::dev.off()
-```
-```{r out.width='80%'}
-knitr::include_graphics(filename)
-```
-
 
