added tuning vignette

--- a/vignettes/mlr3learners_lightgbm_tuning.Rmd
+++ b/vignettes/mlr3learners_lightgbm_tuning.Rmd
@@ -23,34 +23,21 @@ knitr::opts_chunk$set(
 ```{r setup}
 library(mlr3)
 library(mlr3learners.lgbpy)
-library(lightgbm.py)
 library(paradox)
 ```
 
-```{r include=FALSE}
-reticulate::py_config()
-lightgbm.py::install_py_lightgbm()
-```
-
-# Load the mlr3 task
+# Load the dataset 
 
 ```{r}
 task <- mlr3::tsk("pima")
-target_col <- "diabetes"
-id_col <- NULL
 ```
 
 ```{r}
-split <- lightgbm.py::sklearn_train_test_split(
-  task$data(),
-  target_col,
-  split = 0.7,
-  seed = 17,
-  return_only_index = TRUE,
-  stratify = TRUE
+set.seed(17)
+split <- list(
+  train_index = sample(seq_len(task$nrow), size = 0.7 * task$nrow)
 )
-table(task$data()[split$train_index, task$target_names, with = F])
-table(task$data()[split$test_index, task$target_names, with = F])
+split$test_index <- setdiff(seq_len(task$nrow), split$train_index)
 ```
 
 # Instantiate the lightgbm learner 
@@ -64,76 +51,127 @@ learner <- mlr3::lrn("classif.lgbpy")
 # Configure the learner 
 
 ```{r}
-learner$id_col <- id_col
 learner$early_stopping_rounds <- 100
-learner$num_boost_round <- 5000
+learner$nrounds <- 1000
 ```
+
+We will here switch off the parallelization of the lightgbm learner by setting the parameter `num_threads = 1L`. Instead, we will later parallelize the resampling using the `future` package, as recommended by the [mlr3 team](https://mlr3book.mlr-org.com/parallelization.html#parallelization).  
 
 ```{r}
 learner$param_set$values <- list(
   "objective" = "binary",
-  "learning_rate" = 0.01,
+  "learning_rate" = 0.1,
   "seed" = 17L,
-  "bagging_freq" = 5L
+  "bagging_freq" = 5L,
+  "num_threads" = 1L,
+  "metric" = "auc"
 )
 
 tune_ps <- ParamSet$new(list(
   ParamDbl$new("bagging_fraction", lower = 0.4, upper = 1),
   ParamInt$new("min_data_in_leaf", lower = 5, upper = 30)
 ))
+
+# design_points
+design <- paradox::generate_design_grid(
+  tune_ps,
+  param_resolutions = c(
+    bagging_fraction = 2,
+    min_data_in_leaf = 5
+  ))
+
+# shuffle order of design
+set.seed(17)
+shuffle <- sample(seq_len(nrow(design$data)), size = nrow(design$data))
+design$data <- design$data[shuffle, ]
 ```
 
-# Resampling strategy
+# Create the resampling strategy and the measure 
 
 ```{r}
-resamp <- mlr3::rsmp("cv", folds = 5)
+resampling <- mlr3::rsmp("cv", folds = 5)
 measure <- mlr3::msr("classif.auc")
 ```
 
-# Train the learner 
+
+# Create the tuner 
 
 ```{r}
-terminate <- mlr3tuning::term("stagnation")
+# grid_resolution <- 2
+# tuner <- mlr3tuning::tnr("grid_search", resolution = grid_resolution, batch_size = 1)
 
-instance <- mlr3tuning::TuningInstance$new(
-  task = task,
+tuner <- mlr3tuning::tnr("design_points", design = design$data, batch_size = 1)
+```
+
+# Create the terminator 
+
+```{r}
+# using a specific number of iterations
+# n_iterations <- (grid_resolution ^ tune_ps$length)
+
+n_iterations <- nrow(design$data)
+
+n_iterations
+terminator <- mlr3tuning::term("evals", n_evals = n_iterations)
+```
+
+# Instantiate the AutoTuner instance 
+
+```{r}
+at <- mlr3tuning::AutoTuner$new(
   learner = learner,
-  resampling = resamp,
+  resampling = resampling,
   measures = measure,
-  param_set = tune_ps,
-  terminator = terminate
+  tune_ps = tune_ps,
+  terminator = terminator,
+  tuner = tuner
 )
-instance
+at
 ```
 
+# Train the tuner 
+
 ```{r}
-tuner <- mlr3tuning::tnr("grid_search", resolution = 5)
+future::plan("multisession")
 set.seed(17)
-result <- tuner$tune(instance)
+at$train(task, row_ids = split$train_index)
+future::plan("sequential")
 ```
 
+# Evaluate the best model 
+
 ```{r}
-best <- instance$best()
+at$tuning_result
+best <- at$tuning_instance$best()
 best$score(mlr3::msr("classif.auc"))
 ```
 
 ```{r}
-instance$archive(unnest = "params")[, c("bagging_fraction", "min_data_in_leaf", "classif.auc")]
+mlr3viz::autoplot(at$tuning_instance$best(), type = "roc")
 ```
 
 ```{r}
-instance$result$params
-learner$param_set$values <- instance$result$params
-learner$train(task, row_ids = split$train_index)
+at$tuning_instance$archive(unnest = "params")[, c("bagging_fraction", "min_data_in_leaf", "classif.auc")]
 ```
 
-```{r}
-learner$model$best_iteration
-learner$model$best_score$valid_0
-```
+# Best parameters 
 
 ```{r}
-predictions <- learner$predict(task, row_ids = split$test_index)
+at$tuning_instance$result$params
+nrounds <- best$learners[[1]]$lgb_learner$nrounds
+nrounds
+```
+
+# Importance 
+
+```{r}
+at$learner$importance()
+```
+
+# Predict test data with best model
+
+```{r}
+predictions <- at$predict(task, row_ids = split$test_index)
 head(predictions$response)
 ```
 
@@ -147,11 +185,11 @@ predictions$score(mlr3::msr("classif.auc"))
 ```
 
 ```{r}
-importance <- learner$importance()
-importance
-```
-```{r}
-importance2 <- learner$importance2()
-importance2$raw_values
+mlr3viz::autoplot(predictions)
 ```
 
+### ROC 
+
+```{r}
+mlr3viz::autoplot(predictions, type = "roc")
+```
