--- a/vignettes/mlr3learners_lgbpy_regression.Rmd
+++ b/vignettes/mlr3learners_lgbpy_regression.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "mlr3learners.lgbpy: Mulitclass Classification GPU Example"
+title: "mlr3learners.lgbpy: Regression Example"
 date: "`r Sys.Date()`"
 output:
   rmarkdown::html_vignette:
     keep_md: true
 vignette: >
-  %\VignetteIndexEntry{mlr3learners_lightgbm_multiclass_gpu}
+  %\VignetteIndexEntry{mlr3learners_lgbpy_regression}
   %\VignetteEncoding{UTF-8}
   %\VignetteEngine{knitr::rmarkdown}
 editor_options: 
@@ -15,8 +15,7 @@ editor_options:
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>",
-  eval = FALSE
+  comment = "#>"
 )
 ```
 
@@ -41,18 +40,17 @@ reticulate::install_miniconda(
 reticulate::py_config()
 ```
 
-Before you can use the `mlr3learners.lgbpy` package with GPU acceleration, you need to compile the `lightgbm` python package according to [its documentation](https://github.com/microsoft/LightGBM/blob/master/python-package/README.md). 
-You can compile the GPU version on Linux/ in docker with the following commands: 
+Use the function `install_py_lightgbm` in order to install the lightgbm python module. This function will first look, if the reticulate package is configured well and if the python module `lightgbm` is aready present. If not, it is automatically installed. 
 
-```{bash}
-pip install lightgbm --install-option=--gpu
+```{r}
+lightgbm.py::install_py_lightgbm()
 ```
 
 # Load the mlr3 task
 
 ```{r}
-task <- mlr3::tsk("iris")
-target_col <- "Species"
+task <- mlr3::tsk("boston_housing")
+target_col <- "medv"
 id_col <- NULL
 ```
 
@@ -65,18 +63,16 @@ split <- lightgbm.py::sklearn_train_test_split(
   split = 0.7,
   seed = 17,
   return_only_index = TRUE,
-  stratify = TRUE
+  stratify = FALSE
 )
-table(task$data()[split$train_index, task$target_names, with = F])
-table(task$data()[split$test_index, task$target_names, with = F])
 ```
 
 # Instantiate the lightgbm learner 
 
-Initially, the `classif.lgbpy` class needs to be instantiated: 
+Initially, the `regr.lgbpy` class needs to be instantiated: 
 
 ```{r}
-learner <- mlr3::lrn("classif.lgbpy")
+learner <- mlr3::lrn("regr.lgbpy")
 ```
 
 # Configure the learner 
@@ -96,15 +92,11 @@ learner$early_stopping_rounds <- 100
 learner$num_boost_round <- 5000
 ```
 
-In order to use the GPU acceleration, the parameter `device_type = "gpu"` (default: "cpu") needs to be set. According to the [LightGBM parameter manual](https://lightgbm.readthedocs.io/en/latest/Parameters.html), 'it is recommended to use the smaller `max_bin` (e.g. 63) to get the better speed up'. 
-
 ```{r}
 learner$param_set$values <- list(
-  "learning_rate" = 0.01,
+  "learning_rate" = 0.1,
   "seed" = 17L,
-  "metric" = "multi_logloss",
-  "device_type" = "gpu",
-  "max_bin" = 63L
+  "metric" = "rmse"
 )
 ```
 
@@ -118,23 +110,17 @@ learner$train(task, row_ids = split$train_index)
 
 # Evaluate the model performance 
 
-The learner's `predict` function returns an object of mlr3's class `PredictionClassif`.
+The learner's `predict` function returns an object of mlr3's class `PredictionRegr`.
 
 ```{r}
 predictions <- learner$predict(task, row_ids = split$test_index)
 head(predictions$response)
 ```
 
-It includes also a confusion  matrix:
-
-```{r}
-predictions$confusion
-```
-
 Further metrics can be calculated by using mlr3 measures:
 
 ```{r}
-predictions$score(mlr3::msr("classif.logloss"))
+predictions$score(mlr3::msr("regr.rmse"))
 ```
 
 The variable importance plot can be calculated by using the learner's `importance` function:
